# loadi

./: .gitignore  README.md  pyproject.toml
scripts/: load_some_clusters.py  make_analyzer_junji.py
src/loadi/: __init__.py  experiment_list.py
src/loadi/loaders/: Dandi.py  Kanter_Moser_2025.py  Nagelhus_Moser_2023.py  Q0FG1X8.py  base.py  bri.py  junji.py  teris.py
src/loadi/resources/dandi/: 000213.json
src/loadi/resources/data_paths/: Kanter_Moser_2025.json  Nagelhus_Moser_2023.json  Nagelhus_Moser_2023_file_map.json  Q0FG1X8_2020.json
